syntax = "proto3";

package grpcDemo;

message String {
  string hello = 1; //
}
